# aws-serverless-multirepo

./: README.md
.github/workflows/: basic-go-be.yml  cache-manager.yml  classic-partner-be.yml  config-builder.yml  google-maps-be.yml  openai-test.yml  prod-frontend.yml  rust-go-be.yml  s3-website.yml  terraform-basicauth.yml  terraform-runner-classicpartner.yml  terraform-runner-google-maps.yml
Infrastructure/: README.md
Infrastructure/basic-auth/github/: main.tf
Infrastructure/basic-auth/github/backend/: backend.tf
Infrastructure/custom/dynamo-db/: main.tf
Infrastructure/custom/dynamo-db/vars/mapping/dev/: backend.tf  vars.tf
Infrastructure/custom/dynamo-db/vars/mapping/prod/: backend.tf  vars.tf
Infrastructure/custom/dynamo-db/vars/outlets/dev/: backend.tf  vars.tf
Infrastructure/custom/dynamo-db/vars/outlets/prod/: backend.tf  vars.tf
Infrastructure/google-maps/dynamo-db/: main.tf
Infrastructure/google-maps/dynamo-db/vars/autocomplete/dev/: backend.tf  vars.tf
frontend/poc-cognito/: index.html  package.json  server.js  session.html  signin.html
functions/basic-go/: Makefile  go.mod  package-lock.json  package.json  serverless.yml
functions/basic-go/hello/: main.go
functions/basic-rust/: Cargo.toml  rust_lambda_helpers.zsh  serverless.yml
functions/basic-rust/src/: main.rs
functions/node-cognito/: package.json  serverless.env.yml  serverless.yml
functions/openai-test/: api-call-test.py
functions/python-finance/: yfinance-test-2.py  yfinance-test.py
s3-website/: README.md
(+6 files in other folders)
