[package]
name = "basic-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.54.1"
aws-sdk-dynamodb = "^0.24.0"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "^0.7.3"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^4.0.0"
uuid = {version = "^1.3.0", features = ["v4"]}

