[package]
name = "basic-rust"
version = "0.1.0"
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.19"
aws-config = "^0.53.0"
aws-sdk-dynamodb = "^0.23.0"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "^0.7.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^4.0.0"
uuid = {version = "^1.3.0", features = ["v4"]}

